<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/cropSelector"
            android:backgroundTint="#DAEFB3"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_height="150dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/crop_selector"
                    android:layout_gravity="center|top"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/crop_selector"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:backgroundTint="#EEF4D4"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:id="@+id/sowingDate"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sowing"
                    android:layout_gravity="center|top"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/sowing_date"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_weight="1"
            android:backgroundTint="#EEF4D4"
            android:id="@+id/timeline"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_height="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="104dp"
                    android:layout_height="97dp"
                    android:layout_gravity="center|top"
                    android:src="@drawable/timeline" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/sowing_advisory"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/diseaseDetector"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#DAEFB3"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/disease_detection"
                    android:layout_gravity="center|top"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/disease_detector"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:backgroundTint="#DAEFB3"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/chatbot"
            android:layout_height="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/chatbot"
                    android:layout_gravity="center|top"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/chatbot"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/buyingSelling"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="#EEF4D4"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/money"
                    android:layout_gravity="center|top"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/buying_selling"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>